--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
 		"@types/node": "^16.18.36",
 		"@types/react": "^18.2.13",
 		"@types/react-dom": "^18.2.6",
+		"@types/react-router-dom": "^5.3.3",
 		"axios": "^1.4.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.13.0",
 		"react-scripts": "5.0.1",
+		"styled-components": "^6.0.0-rc.3",
+		"v6": "^0.0.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -38,11 +42,14 @@
 		]
 	},
 	"devDependencies": {
+		"@types/styled-components": "^5.1.26",
 		"@typescript-eslint/eslint-plugin": "^5.60.0",
 		"eslint": "^8.43.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-config-standard-with-typescript": "^35.0.0",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-n": "^15.7.0",
+		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-react": "^7.32.2",
 		"prettier": "^2.8.8",
